--- a/SalesWPFApp/BookManagementWindow.xaml
+++ b/SalesWPFApp/BookManagementWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SalesWPFApp"
         mc:Ignorable="d"
         Loaded="Window_Loaded"
+        Closing="Window_Closing"
         Title="Manage Books" Height="600" Width="800">
     <Grid>
         <Grid.Background>
@@ -77,7 +78,7 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                 <TextBlock Text="ImageUrl:" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <TextBox x:Name="txtImageUrl" Width="300" Margin="5,0" />
+                <TextBox x:Name="txtImageUrl" Width="300" Margin="5,0" IsReadOnly="True"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
                 <Button Content="Upload an image" Width="150" Height="30" Click="AddImageButton_Click" Margin="5" Background="#FF4CAF50" Foreground="White"/>
