--- a/SalesWPFApp/MainWindow.xaml
+++ b/SalesWPFApp/MainWindow.xaml
@@ -1,22 +1,33 @@
 ﻿<Window x:Class="SalesWPFApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SalesWPFApp"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Ryou Book Store Authentication" Height="450" Width="800">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="0*"/>
-        </Grid.ColumnDefinitions>
-        <GroupBox Margin="101,60,109,71"/>
-        <Label Content="Email                " HorizontalAlignment="Left" Margin="135,159,0,0" VerticalAlignment="Top" Height="26" Width="44" FontWeight="Bold"/>
-        <Label Content="Password" HorizontalAlignment="Left" Margin="135,0,0,0" VerticalAlignment="Center" FontWeight="Bold"/>
-        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Margin="214,163,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="309" />
-        <Button x:Name="btnLogin" Content="Login" HorizontalAlignment="Left" Margin="400,276,0,0" VerticalAlignment="Top" Height="30" Width="120" BorderBrush="#FF654B4B" Background="#FFA7E0F7" Click="btnLogin_Click"/>
-        <PasswordBox x:Name="txtPassword" HorizontalAlignment="Left" Margin="214,212,0,0" VerticalAlignment="Top" Width="309"/>
-        <Button x:Name="btnExit" Content="Exit" HorizontalAlignment="Left" Margin="214,276,0,0" VerticalAlignment="Top" Height="30" Width="122" Click="btnExit_Click"/>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#FF2181F3" Offset="0.0" />
+                <GradientStop Color="#FF301616" Offset="1.0" />
+            </LinearGradientBrush>
+        </Grid.Background>
+
+        <Label Content="Ryou Book Store Management" HorizontalAlignment="Left" Margin="191,84,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" Foreground="#FFE0E0E0"/>
+
+        <!-- Email Label and TextBox -->
+        <Label Content="Email" HorizontalAlignment="Left" Margin="135,159,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <TextBox x:Name="txtEmail" HorizontalAlignment="Left" Margin="214,163,0,0" VerticalAlignment="Top" Width="309" 
+                 TextWrapping="Wrap" TabIndex="0" />
+
+        <!-- Password Label and PasswordBox -->
+        <Label Content="Password" HorizontalAlignment="Left" Margin="135,212,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <PasswordBox x:Name="txtPassword" HorizontalAlignment="Left" Margin="214,212,0,0" VerticalAlignment="Top" Width="309"
+                     TabIndex="1" />
+
+        <!-- Login Button -->
+        <Button x:Name="btnLogin" Content="Login" HorizontalAlignment="Left" Margin="400,276,0,0" VerticalAlignment="Top"
+                Height="30" Width="120" BorderBrush="#FF654B4B" Background="#FFA7E0F7" Click="btnLogin_Click" IsDefault="True" TabIndex="2" />
+
+        <!-- Exit Button -->
+        <Button x:Name="btnExit" Content="Exit" HorizontalAlignment="Left" Margin="214,276,0,0" VerticalAlignment="Top"
+                Height="30" Width="122" Click="btnExit_Click" TabIndex="3" />
     </Grid>
 </Window>
